Added application logic, implemented a mechanism to fill out the document when filling out the form

--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
       "no-console": "off",
       "no-underscore-dangle": "off",
       "function-paren-newline": "off",
+      "linebreak-style": "off",
       "import/first": "off",
       "import/prefer-default-export": "off",
       "react/jsx-filename-extension": [
